feat: Add the HTML markup for the hero section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="style.css">
+
+    <title>Cristina Gomez Web Exploration</title>
 </head>
 <body>
-    
+   
+    <main class="wrapper">
+        <header class="header">
+            <h1 class="header__name">
+                <span class="header__name--text">
+                    Independent photographer <br>& graphic designer
+                </span>
+            </h1>
+
+            <p class="header__location">
+                <span class="overflow__wrapper">
+                    <span class="header__location--title">location</span>
+                    <span class="header__location--place">Malaga, Spain(6:28AM)</span>
+                </span>
+            </p>
+
+            <nav class="header__navigation">
+                <span class="overflow__wrapper">
+                    <p class="navigation__title">navigation</p>
+
+                    <ul>
+                        <li class="header__navigation--item"><a href="#" class="navigation__link">info,</a></li>
+                        <li class="header__navigation--item"><a href="#" class="navigation__link">work,</a></li>
+                        <li class="header__navigation--item"><a href="#" class="navigation__link">archive,</a></li>
+                        <li class="header__navigation--item"><a href="#" class="navigation__link">contact</a></li>
+                    </ul>
+                </span>
+            </nav>
+
+            <nav class="header__navigation--two">
+                <span class="overflow__wrapper">
+                    <p class="navigation__title">Let's connect</p>
+
+                    <ul>
+                        <li class="header__navigation--item"><a href="#" class="navigation__link">instagram,</a></li>
+                        <li class="header__navigation--item"><a href="#" class="navigation__link">email,</a></li>
+                        <li class="header__navigation--item"><a href="#" class="navigation__link">twitter</a></li>
+                    </ul>
+                </span>
+            </nav>
+        </header>
+
+        <div class="images">
+            <div class="images__item">
+                <img src="./assets/images/1 (1).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (2).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (3).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (4).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (6).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (7).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (8).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (9).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (10).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (13).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (15).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (18).webp" alt="">
+            </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (19).webp" alt="">
+            </div>
+        </div>
+
+        <div class="container">
+            <h2 class="container__heading">
+                <span class="container__heading--text">cristina gomez</span>
+            </h2>
+        </div>
+    </main>
+
+ 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
