style: Add the styles for the hero section and for the overlay grid for visualizing the grid layout of the design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Cristina Gomez Web Exploration</title>
 </head>
 <body>
+    <div class="overlay"></div>
    
     <main class="wrapper">
         <header class="header">
@@ -107,7 +108,7 @@
 
         <div class="container">
             <h2 class="container__heading">
-                <span class="container__heading--text">cristina gomez</span>
+                <span class="container__heading--text">cristina gómez</span>
             </h2>
         </div>
     </main>
