chore: Add a new image to be used in the preloader gallery image

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
             <div class="images__item">
                 <img src="./assets/images/1 (19).webp" alt="">
             </div>
+
+            <div class="images__item">
+                <img src="./assets/images/1 (24).webp" alt="">
+            </div>
         </div>
 
         <div class="container">
