--- a/index.html
+++ b/index.html
@@ -53,59 +53,59 @@
         </header>
 
         <div class="images">
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (1).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (2).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (3).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (4).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (6).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (7).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item center__item">
                 <img src="./assets/images/1 (8).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (9).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (10).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (13).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (15).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (18).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (19).webp" alt="">
             </div>
 
-            <div class="images__item">
+            <div class="images__item offset">
                 <img src="./assets/images/1 (24).webp" alt="">
             </div>
         </div>
@@ -120,6 +120,8 @@
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Flip.min.js"></script>
+
     <script src="./script.js"></script>
 </body>
 </html>
