--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <main class="wrapper">
         <header class="header">
             <h1 class="header__name">
-                <span class="header__name--text">
+                <span class="header__name--text" id="translate-y-text">
                     Independent photographer <br>& graphic designer
                 </span>
             </h1>
 
             <p class="header__location">
-                <span class="overflow__wrapper">
+                <span class="overflow__wrapper" id="translate-y-text">
                     <span class="header__location--title">location</span>
                     <span class="header__location--place">Malaga, Spain(6:28AM)</span>
                 </span>
             </p>
 
             <nav class="header__navigation">
-                <span class="overflow__wrapper">
+                <span class="overflow__wrapper" id="translate-y-text">
                     <p class="navigation__title">navigation</p>
 
                     <ul>
@@ -40,7 +40,7 @@
             </nav>
 
             <nav class="header__navigation--two">
-                <span class="overflow__wrapper">
+                <span class="overflow__wrapper" id="translate-y-text">
                     <p class="navigation__title">Let's connect</p>
 
                     <ul>
@@ -53,66 +53,66 @@
         </header>
 
         <div class="images">
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (1).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (2).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (3).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (4).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (6).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (7).webp" alt="">
             </div>
 
-            <div class="images__item center__item">
+            <div class="images__item scale__image">
                 <img src="./assets/images/1 (8).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (9).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (10).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (13).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (15).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (18).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (19).webp" alt="">
             </div>
 
-            <div class="images__item offset">
+            <div class="images__item offset__image">
                 <img src="./assets/images/1 (24).webp" alt="">
             </div>
         </div>
 
         <div class="container">
             <h2 class="container__heading">
-                <span class="container__heading--text">cristina gómez</span>
+                <span class="container__heading--text" id="translate-footer-text">cristina gómez</span>
             </h2>
         </div>
     </main>
