docs: Add comment to show the grid layout overlay for grid visualization

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Cristina Gomez Web Exploration</title>
 </head>
 <body>
+    
+    <!-- Grid layout overlay -->
     <div class="overlay"></div>
    
     <main class="wrapper">
